<resources>
    <string name="standard_error_message">A error has occur, please try again later</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="show_read">Show Read</string>
    <string name="hide_read">Hide Read</string>
    <string name="mark_all_read">Mark All Read</string>
    <string name="manage_sources">Manage Sources</string>
    <string name="no_items">No item available...</string>
    <string name="progress_title">Please wait...</string>
    <string name="progress_message">We are processing your request.</string>
    <string name="update_started">Update started</string>
    <string name="update_failed">Update failed</string>
    <string name="audio">Audio</string>
    <string name="video">Video</string>
    <string name="unknown">Unknown</string>
    <string name="license">License</string>
    <string name="backuprestoreactivity_description">Please ensure the SD card is present and mounted. Backup will be written to or read from file named Database.db and AppSettings.xml</string>
    <string name="backuprestoreactivity_backupfound">Existing backup found</string>
    <string name="backuprestoreactivity_nobackupfound">No existing backup found</string>
    <string name="backuprestoreactivity_wantbackup">I would like to overwrite existing backup file</string>
    <string name="backuprestoreactivity_wantrestore">I would like to restore feed list from the backup</string>
    <string name="backuprestoreactivity_backup">Backup</string>
    <string name="backuprestoreactivity_restore">Restore</string>
    <string name="backuprestoreactivity_title">Backup / Restore</string>
    <string name="backuprestoreactivity_backupsuccess">Backup group and feed has completed successfully</string>
    <string name="backuprestoreactivity_backupfailure">Backup failed, please check to make sure SD card write enabled</string>
    <string name="backuprestoreactivity_restoresuccess">Restore group and feed has completed successfully</string>
    <string name="backuprestoreactivity_restorefailure">Restore failed, please check to make sure SD card is inserted</string>
    <string name="settings_display_title">Display &amp; Presentation</string>
    <string name="settings_display_summary">Set screen display preferences</string>
    <string name="settings_display_options">Display options</string>
    <string name="settings_display_colortheme_title">Color theme</string>
    <string name="settings_display_colortheme_summary">Set display color theme</string>
    <string name="settings_display_sortarticleby_title">Sort article by</string>
    <string name="settings_display_sortarticleby_summary">Sort articles by selected order</string>
    <string name="settings_display_language_title">Select language</string>
    <string name="settings_display_language_summary">Select a display language</string>
    <string name="settings_updates_title">Article Updates</string>
    <string name="settings_updates_summary">Set up automatic and manual article updates</string>
    <string name="settings_updates_options">Update options</string>
    <string name="settings_updates_auto_title">Automatic updates</string>
    <string name="settings_updates_auto_summary">If checked, feeds will be updated automatically</string>
    <string name="settings_updates_updateinterval_title">Update interval</string>
    <string name="settings_updates_updateinterval_summary">Control frequency of automatic feed updates</string>
    <string name="settings_updates_nodatainroaming_title">No data when roaming</string>
    <string name="settings_updates_nodatainroaming_summary">Disable automatic/manual update when in roaming</string>
    <string name="settings_updates_wifionly_article_title">Wi-Fi only for article</string>
    <string name="settings_updates_wifionly_article_summary">Automatic updates article only when Wi-Fi is connected</string>
    <string name="settings_updates_wifionly_articleimage_title">Wi-Fi only for image</string>
    <string name="settings_updates_wifionly_articleimage_summary">Automatic/Manual update image only when Wi-Fi is connected</string>
    <string name="settings_updates_wifionly_podcast_title">Wi-Fi only for podcast</string>
    <string name="settings_updates_wifionly_podcast_summary">Automatic/Manual download podcast only when Wi-Fi is connected</string>
    <string name="settings_message_title">Message Store</string>
    <string name="settings_message_summary">Set store limits, turn on SD card storage, etc.</string>
    <string name="settings_message_options">Message store options</string>
    <string name="settings_message_limit_title">Feed message store limit</string>
    <string name="settings_message_limit_summary">Set limit for each feed, except for feed(s) that override this value</string>
    <string name="settings_message_keepunreaditems_title">Keep unread items</string>
    <string name="settings_message_keepunreaditems_summary">"Don't auto delete unread articles and podcasts"</string>
    <string name="settings_message_sdcardforstorage_title">Use SD card for storage</string>
    <string name="settings_message_sdcardforstorage_summary">Caching images and podcasts to SD card</string>
    <string name="settings_notifications_title">Notifications</string>
    <string name="settings_notifications_summary">Control notification behavior</string>
    <string name="settings_notifications_options">Notifications options</string>
    <string name="settings_notifications_notification_title">Notifications</string>
    <string name="settings_notifications_notification_summary">Enable notifications for automatic and manual updates</string>
    <string name="settings_notifications_ringtone_title">Select ringtone</string>
    <string name="settings_notifications_ringtone_summary">Play sound alert with selected ringtone</string>
    <string name="settings_notifications_vibrate_title">Vibrate</string>
    <string name="settings_notifications_vibrate_summary">Vibrate device</string>
    <string name="settings_notifications_flashlight_title">Flash light</string>
    <string name="settings_notifications_flashlight_summary">Flash device LED</string>
    <string name="settings_advanced_title">Advanced</string>
    <string name="settings_advanced_summary">Options for advanced users</string>
    <string name="settings_advanced_options">Advanced options</string>
    <string name="settings_advanced_useragent_title">HTTP header user-agent</string>
    <string name="settings_advanced_useragent_summary">Set custom user-agent value, leave it blank to use system default value</string>
    <string name="settings_backuprestore_title">Backup / Restore</string>
    <string name="settings_backuprestore_summary">Backup / Restore feed list to / from SD card</string>
    <string name="settings_license_title">License</string>
    <string name="settings_about_title">About</string>
    <string name="open">Open</string>
    <string name="toggle_star">Toggle Star</string>
    <string name="toggle_read">Toggle Read</string>
    <string name="delete">Delete</string>
    <string name="share_link">Share Link</string>
    <string name="share_article">Share Article</string>
    <string name="no_previous_article">No previous article</string>
    <string name="no_next_article">No next article</string>
    <string name="link_unavailable">Link is not available</string>
    <string name="tab_latest">Latest</string>
    <string name="tab_unread">Unread</string>
    <string name="tab_star">Star</string>
    <string name="tab_podcast">Podcast</string>
    <string name="tab_source">Source</string>
    <string name="tab_all">All</string>
    <string name="restart_application">You must restart this application for the changes to take effect</string>
    <string name="new_article">%1$d new article(s)</string>
    <string name="image">Image</string>
    <string name="trial_period_expired_title">Trial Period Expired</string>
    <string name="trial_period_expired_message">Your trial period has ended. Please purchase to continue using this software.</string>
    <string name="trial_period_expired_positive">Purchase</string>
    <string name="trial_period_expired_negative">Cancel</string>
    <string name="new_purchase_message">Thank you for your purchase, trial is now unlocked, please restart application.</string>
    <string name="search">Search</string>
    <string name="feed_url">Feed Url</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="help_us">Help Us!</string>
    <string name="properties">Properties</string>
    <string name="delete_all">Delete All</string>
    <string name="title">Title</string>
    <string name="encoding">Encoding</string>
    <string name="exclude_auto_update">Exclude from auto update</string>
    <string name="auto_download_article">Auto download new article(s)</string>
    <string name="auto_download_podcast">Auto download new podcast(s)</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="fullscreen_on">Fullscreen On</string>
    <string name="fullscreen_off">Fullscreen Off</string>
    <string name="font_size">Font Size</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="mark_read_until_here">Mark Read Until Here</string>
    <string name="mark_read_to_bottom">Mark Read To Bottom</string>
    <string name="download_article">Download Article</string>
    <string name="download_podcast">Download Podcast</string>
    <string name="undownload_article">Undownload Article</string>
    <string name="undownload_podcast">Undownload Podcast</string>
    <string name="clear_playlist">Clear Playlist</string>
    <string name="translate">Translate</string>
    <string name="aboutactivity_text">About</string>
    <string name="aboutactivity_url" />
    <string name="delete_feed">Delete Feed</string>
    <string name="copy_link">Copy Link</string>
    <string name="view_comments">View Comments</string>
    <string name="play_online">Play Online</string>
    <string name="playlist_add">Add To Playlist</string>
    <string name="playlist_remove">Remove From Playlist</string>
    <string name="open_website">Open Website</string>
    <string name="delete_all_read">Delete All Read</string>
    <string name="manage_group">Manage Group</string>
    <string name="manage_tag">Manage Tag</string>
    <string name="pick_feeds">Pick Feeds</string>
    <string name="delete_group">Delete Group</string>
    <string name="mobilize">Mobilize</string>
    <string name="clean_up">Clean Up</string>
    <string name="group">Group</string>
    <string name="cleanup_unread_title">Clean up unread articles older than selected days</string>
    <string name="cleanup_read_title">Clean up read articles older than selected days</string>
    <string name="cleanup_keep_star">Keep starred articles</string>
    <string name="update_all">Update All</string>
    <string name="stop_update">Stop Update</string>
    <string name="update">Update</string>
    <string name="feedback">Feedback</string>
    <string name="organize_feed">Organize Feed</string>
    <string name="play_pause">Play/Pause</string>
    <string name="play_with">Play With Media Player</string>
    <string name="exit">Exit App</string>
    <string name="repeat">Repeat</string>
    <string name="shuffle">Shuffle</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="undelete_all">Undelete All</string>
    <string name="redownload_podcast">Redownload Podcast</string>
    <string name="expand">Expand</string>
    <string name="collapse">Collapse</string>
    <string name="help">Help</string>
    <string name="app_name">SA Express News</string>
    <string name="aboutactivity_code_copyright" />
    <string name="aboutactivity_art_copyright" />
</resources>