<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_refresh" android:id="@id/main_menu_update_all" android:title="@string/update_all" />
    <item android:icon="@drawable/ic_menu_stop" android:id="@id/main_menu_stop_update" android:title="@string/stop_update" />
    <item android:icon="@drawable/ic_menu_agenda" android:id="@id/main_menu_mark_all_read" android:title="@string/mark_all_read" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_menu_view" android:id="@id/main_menu_show_read" android:title="@string/show_read" />
    <item android:icon="@drawable/ic_menu_view" android:id="@id/main_menu_hide_read" android:title="@string/hide_read" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/main_menu_delete_all" android:title="@string/delete_all" />
    <item android:icon="@drawable/heart" android:id="@id/main_menu_help_us" android:title="@string/help_us" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/main_menu_delete_all_read" android:title="@string/delete_all_read" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/main_menu_undelete_all" android:title="@string/undelete_all" />
    <item android:icon="@drawable/ic_menu_search" android:id="@id/main_menu_search" android:visible="false" android:title="@string/search" />
    <item android:id="@id/main_menu_clean_up" android:title="@string/clean_up" />
    <item android:id="@id/main_menu_clear_cache" android:title="@string/clear_cache" />
    <item android:id="@id/main_menu_organize_feed" android:title="@string/organize_feed" />
    <item android:icon="@drawable/ic_menu_add" android:id="@id/main_menu_manage_sources" android:title="@string/manage_sources" android:showAsAction="ifRoom|withText" />
    <item android:id="@id/main_menu_manage_category" android:title="@string/manage_group" />
    <item android:id="@id/main_menu_manage_tag" android:visible="false" android:title="@string/manage_tag" />
    <item android:icon="@drawable/ic_menu_preferences" android:id="@id/main_menu_settings" android:title="@string/settings" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_menu_feedback" android:id="@id/main_menu_feedback" android:title="@string/feedback" />
    <item android:icon="@drawable/ic_menu_help" android:id="@id/main_menu_help" android:title="@string/help" />
    <item android:icon="@drawable/ic_menu_fullscreen" android:id="@id/main_menu_fullscreen_on" android:title="@string/fullscreen_on" />
    <item android:icon="@drawable/ic_menu_fullscreen" android:id="@id/main_menu_fullscreen_off" android:title="@string/fullscreen_off" />
    <item android:id="@id/main_menu_exit" android:visible="false" android:title="@string/exit" />
</menu>
