<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@id/playlist_context_menu_toggle_star" android:title="@string/toggle_star" />
    <item android:id="@id/playlist_context_menu_play" android:title="@string/play_pause" />
    <item android:id="@id/playlist_context_menu_playonline" android:title="@string/play_online" />
    <item android:id="@id/playlist_context_menu_playwith" android:title="@string/play_with" />
    <item android:id="@id/playlist_context_menu_playlistadd" android:title="@string/playlist_add" />
    <item android:id="@id/playlist_context_menu_playlistremove" android:title="@string/playlist_remove" />
    <item android:id="@id/playlist_context_menu_download_podcast" android:title="@string/download_podcast" />
    <item android:id="@id/playlist_context_menu_undownload_podcast" android:title="@string/undownload_podcast" />
    <item android:id="@id/playlist_context_menu_redownload_podcast" android:title="@string/redownload_podcast" />
    <item android:id="@id/playlist_context_menu_delete" android:title="@string/delete" />
</menu>
