<?xml version="1.0" encoding="utf-8"?>
<menu
  xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@drawable/ic_menu_refresh" android:id="@id/feeditem_option_menu_update" android:title="@string/update" />
    <item android:icon="@drawable/ic_menu_stop" android:id="@id/feeditem_option_menu_stop_update" android:title="@string/stop_update" />
    <item android:icon="@drawable/ic_menu_agenda" android:id="@id/feeditem_option_menu_mark_all_read" android:title="@string/mark_all_read" android:showAsAction="ifRoom|withText" />
    <item android:icon="@drawable/ic_menu_view" android:id="@id/feeditem_option_menu_show_read" android:title="@string/show_read" />
    <item android:icon="@drawable/ic_menu_view" android:id="@id/feeditem_option_menu_hide_read" android:title="@string/hide_read" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/feeditem_option_menu_delete_all" android:title="@string/delete_all" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/feeditem_option_menu_deleteallread" android:title="@string/delete_all_read" />
    <item android:icon="@drawable/ic_menu_delete" android:id="@id/feeditem_option_menu_undeleteall" android:title="@string/undelete_all" />
    <item android:icon="@drawable/ic_menu_fullscreen" android:id="@id/feeditem_option_menu_fullscreen_on" android:title="@string/fullscreen_on" />
    <item android:icon="@drawable/ic_menu_fullscreen" android:id="@id/feeditem_option_menu_fullscreen_off" android:title="@string/fullscreen_off" />
</menu>
