<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="6.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <TextView android:textSize="18.0sp" android:id="@id/backuprestoreactivity_description" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_description" />
        <TextView android:textSize="18.0sp" android:textColor="@color/red" android:id="@id/backuprestoreactivity_nobackupfound" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_nobackupfound" />
        <TextView android:textSize="18.0sp" android:textColor="@color/red" android:id="@id/backuprestoreactivity_backupfound" android:padding="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_backupfound" />
        <CheckBox android:id="@id/backuprestoreactivity_wantbackup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_wantbackup" />
        <Button android:id="@id/backuprestoreactivity_backup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_backup" />
        <CheckBox android:id="@id/backuprestoreactivity_wantrestore" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_wantrestore" />
        <Button android:id="@id/backuprestoreactivity_restore" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/backuprestoreactivity_restore" />
    </LinearLayout>
</ScrollView>
