<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="#ff252525" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="56.0dip">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/title" />
            <EditText android:id="@id/manage_source_property_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/group" />
            <Spinner android:id="@id/manage_source_property_group" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/feed_url" />
            <EditText android:id="@id/manage_source_property_url" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/encoding" />
            <Spinner android:id="@id/manage_source_property_encoding" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" />
            <CheckBox android:id="@id/manage_source_property_exclude_auto_update" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/exclude_auto_update" />
            <CheckBox android:id="@id/manage_source_property_auto_download_article" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_download_article" />
            <CheckBox android:id="@id/manage_source_property_auto_download_podcast" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/auto_download_podcast" />
            <View android:background="@drawable/black_white_gradient" android:layout_width="fill_parent" android:layout_height="1.0dip" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/username" />
            <EditText android:id="@id/manage_source_property_username" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" />
            <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:text="@string/password" />
            <EditText android:id="@id/manage_source_property_password" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="3.0dip" android:password="true" />
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:background="@color/dialog_background" android:paddingLeft="3.0dip" android:paddingTop="5.0dip" android:paddingRight="3.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="-56.0dip" android:layout_marginBottom="1.0dip">
        <Button android:id="@id/manage_source_property_ok" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/save" android:layout_weight="50.0" />
        <Button android:id="@id/manage_source_property_cancel" android:layout_width="0.0dip" android:layout_height="50.0dip" android:text="@string/cancel" android:layout_weight="50.0" />
    </LinearLayout>
</LinearLayout>
