<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:background="@color/white" android:padding="15.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="horizontal" android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:isScrollContainer="true">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
            <ImageView android:layout_gravity="top" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="4.0dip" />
            <TextView android:textStyle="bold" android:textColor="@color/aboutactivity_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/app_name" />
            <TextView android:textColor="@color/aboutactivity_text" android:id="@id/app_version" android:layout_width="wrap_content" android:layout_height="wrap_content" />
            <TextView android:textColor="@color/aboutactivity_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/aboutactivity_text" />
            <TextView android:textColor="@color/aboutactivity_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/aboutactivity_code_copyright" />
            <TextView android:textColor="@color/aboutactivity_text" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dip" android:text="@string/aboutactivity_art_copyright" />
            <TextView android:textColor="@color/aboutactivity_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/aboutactivity_url" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
